cluster/multipan/multipan-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multipan
  labels:
    app.kubernetes.io/instance: multipan
    app.kubernetes.io/name: multipan
spec:
  replicas: 1
  selector:
    matchLabels:
      name: multipan
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: multipan
    spec:
      containers:
        - env:
            - name: AUTOFLASH_FIRMWARE
              value: '0'
            - name: BACKBONE_IF
              value: 'eth0'
            - name: BACKBONE_INTERFACE
              value: 'eth0'
            - name: INFRA_IF_NAME
              value: 'eth0'
            - name: BAUDRATE
              value: '460800'
            - name: CPCD_TRACE
              value: 'true'
            - name: DEVICE
              value: '/dev/ttyUSB0'
            - name: RADIO_URL
              value: '/dev/ttyUSB0'
            - name: EZSP_LISTEN_PORT
              value: '20108'
            - name: FIRMWARE
              value: 'NabuCasa_SkyConnect_RCP_v4.3.1_rcp-uart-hw-802154_460800.gbl'
            - name: FLOW_CONTROL
              value: 'false'
#            - name: NETWORK_DEVICE
            - name: NETWORK_DEVICES
              value: '0'
            - name: OTBR_ENABLE
              value: '1'
            - name: OTBR_LOG_LEVEL
              value: 'info'
            - name: OTBR_REST_LISTEN_PORT
              value: '8081'
            - name: OTBR_WEB_PORT
              value: '80'
            - name: OTB_FIREWALL
              value: '0'
          #image: siliconlabsinc/multiprotocol:gsdk-4.2.4-arm64
          #image: homeassistant/aarch64-addon-silabs-multiprotocol:latest
          image: b2un0/silabs-multipan-docker:latest
          name: multipan
          ports:
            - containerPort: 9999
              hostPort: 9999
              protocol: TCP
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
            - name: http
              containerPort: 80
              hostPort: 80
              protocol: TCP
            - containerPort: 8086
              hostPort: 8086
              protocol: TCP
            - containerPort: 8081
              hostPort: 8081
              protocol: UDP
            - containerPort: 20108
              hostPort: 20108
              protocol: UDP
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: "1"
              memory: 400Mi
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
                - NET_ADMIN
            privileged: true
          volumeMounts:
          - mountPath: /dev/ttyUSB0
            name: ttyacm
          - mountPath: /data
            name: data
          - mountPath: /app-data
            name: app
      restartPolicy: Always
      volumes:
      - name: ttyacm
        hostPath:
          path: /dev/serial/by-id/usb-ITEAD_SONOFF_Zigbee_3.0_USB_Dongle_Plus_V2_20230803192301-if00
          type: CharDevice
      - name: app
        persistentVolumeClaim:
          claimName: multipan-app
      - name: data
        persistentVolumeClaim:
          claimName: multipan-pvc
      affinity: 
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - {key: "feature.node.kubernetes.io/usb-02_1a86_55d4.present", operator: In, values: ["true"]}
#              - {key: "feature.node.kubernetes.io/usb-02_1a86_55d4.present", operator: In, values: ["true"]}
#              - {key: "feature.node.kubernetes.io/usb-ff_0424_ec00.present", operator: In, values: ["true"]}
