cluster/multipan/multipan-service-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: multipan-tcp
  namespace: multipan
  labels:
      app.kubernetes.io/instance: multipan
      app.kubernetes.io/name: multipan-tcp
  annotations:
    metallb.universe.tf/address-pool: default
    metallb.universe.tf/allow-shared-ip: multipan
status:
  loadBalancer:
    ingress:
      - ip: 192.168.42.27
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: "9999"
      port: 9999
      targetPort: 9999
      protocol: TCP
    - name: "8080"
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: "8086"
      port: 8086
      targetPort: 8086
      protocol: TCP
  selector:
    name: multipan
    app.kubernetes.io/instance: multipan
    app.kubernetes.io/name: multipan-tcp
  type: LoadBalancer
  loadBalancerIP: 192.168.42.27
  externalIPs:
    - 192.168.42.27
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  allocateLoadBalancerNodePorts: true
  internalTrafficPolicy: Cluster
