cluster/multipan/multipan-service-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: multipan-udp
  namespace: multipan
  labels:
      app.kubernetes.io/instance: multipan
      app.kubernetes.io/name: multipan-udp
  annotations:
    metallb.universe.tf/address-pool: default
    metallb.universe.tf/allow-shared-ip: multipan
spec:
  ports:
    - name: "8081"
      port: 8081
      protocol: UDP
      targetPort: 8081
    - name: "20108"
      port: 20108
      protocol: UDP
      targetPort: 20108
  selector:
    name: multipan
    app.kubernetes.io/instance: multipan
    app.kubernetes.io/name: multipan-udp
  type: LoadBalancer
  loadBalancerIP: 192.168.42.27
  externalIPs:
    - 192.168.42.27
#  ipFamilies:
#    - IPv4
