cluster/multipan/multipan-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multipan
  namespace: multipan
spec:
  ports:
    - name: "9999"
      port: 9999
      targetPort: 9999
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "8086"
      port: 8086
      targetPort: 8086
    - name: "8081"
      port: 8081
      protocol: UDP
      targetPort: 8081
    - name: "20108"
      port: 20108
      protocol: UDP
      targetPort: 20108
  selector:
    name: multipan
