cluster/multipan/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multipan
spec:
  rules:
    - host: multipan.thomitzek.net
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: multipan
              port: 
                number: 80
